--- a/projet/restaurant/templates/pages/index.html
+++ b/projet/restaurant/templates/pages/index.html
@@ -145,59 +145,83 @@
 
     <!-- ********************************************* MENU ****************************************************** -->
     <div class="section bg-light" id="section-menu" data-aos="fade-up">
-      <div class="container">
-        <div class="row section-heading justify-content-center mb-5">
-          <div class="col-md-8 text-center">
-            <h2 class="heading mb-3">Menu</h2>
-            <p class="sub-heading mb-5">Free Website Template For Restaurants Made by Colorlib</p>  
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-8">
-            <ul class="nav site-tab-nav" id="pills-tab" role="tablist">
-
-              <!-- <li class="nav-item">
-                <a class="nav-link active" :id="'pills-breakfast-tab' + resultats_plat_cat[0].id " data-toggle="pill" :href="'#pills-breakfast' + resultats_plat_cat[0].id" role="tab" :aria-controls="'pills-breakfast' + resultats_plat_cat[0].id" aria-selected="true">${resultats_plat_cat[0].nom}</a>
-              </li> -->
-
-              <li class="nav-item" v-for='item in resultats_plat_cat'>
-                <a class="nav-link active" :id="'pills-breakfast-tab' + item.id " data-toggle="pill" :href="'#pills-breakfast' + item.id" role="tab" :aria-controls="'pills-breakfast' + item.id" aria-selected="false">${item.nom}</a>
-              </li>
-
-            </ul>
-            <!-- <div class="tab-content" id="pills-tabContent" >
-              <div  class="tab-pane fade show active" :id="'pills-breakfast'+ resultats_plat_cat[0].id" role="tabpanel" :aria-labelledby="'pills-breakfast-tab'+ resultats_plat_cat[0].id">
-                <div v-for='item2 in resultats_plat_cat[0].catPlat' class="d-block d-md-flex menu-food-item">
-                  <div class="text order-1 mb-3">
-                    <img :src="item2.image" alt="Image">
-                    <h3><a href="#">${item2.nom}</a></h3>
-                    <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
-                  </div>
-                  <div class="price order-2">
-                    <strong>$10.49</strong>
-                  </div>
-                </div> 
-              </div> -->
-
-            <div v-for='item in resultats_plat_cat'  class="tab-pane fade" :id="'pills-breakfast'+ item.id" role="tabpanel" :aria-labelledby="'pills-breakfast-tab'+ item.id">
-              <div v-for='item2 in item.catPlat' class="d-block d-md-flex menu-food-item">
-                <div class="text order-1 mb-3">
-                  <img :src="item2.image" alt="Image">
-                  <h3><a href="#">${item2.nom}</a></h3>
-                  <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
-                </div>
-                <div class="price order-2">
-                  <strong>$10.49</strong>
-                </div>
-              </div> <!-- .menu-food-item -->
+      <div>
+        <div class="container">
+          <div class="row section-heading justify-content-center mb-5">
+            <div class="col-md-8 text-center">
+              <h2 class="heading mb-3">Menu</h2>
+              <p class="sub-heading mb-5">Free Website Template For Restaurants Made by Colorlib</p>  
             </div>
           </div>
-          
+          <div class="row justify-content-center">
+            <div class="col-md-8">
+              <div id="mon_menu_moi">
+                <ul class="nav site-tab-nav" id="pills-tab" role="tablist">
+
+                  <li v-for="ites in resultatsmenu" class="nav-item">
+                    <a class="nav-link" id="pills-ID-tab" data-toggle="pill" :href='"#pills-' + ites.node.id + '"' role="tab" aria-controls="pills-ID" aria-selected="true">${ites.node.nom}</a>
+                  </li>
+
+                </ul>
+                <div class="tab-content" id="pills-tabContent">
+
+                  <div class="tab-pane fade show active" :id="'#pills-' + ites.node.id + " role="tabpanel" aria-labelledby="pills-ID-tab">
+                    <div class="d-block d-md-flex menu-food-item">
+
+                      <div class="text order-1 mb-3">
+                        <img src="/static/images/img_1.jpg" alt="Image">
+                        <h3><a href="#">Warm Spinach Dip &amp; Chips</a></h3>
+                        <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
+                      </div>
+                      <div class="price order-2">
+                        <strong>$10.49</strong>
+                      </div>
+                    </div> <!-- .menu-food-item -->
+
+                    <div class="d-block d-md-flex menu-food-item">
+                      <div class="text order-1 mb-3">
+                        <img src="/static/images/img_2.jpg" alt="Image">
+                        <h3><a href="#">Key Wast Machos</a></h3>
+                        <p>Crisp tortilla and plantain chips covered with lightly spiced ground beef, melted cheese, pickled jalapeños, guacamole, sour cream and salsa.</p>
+                      </div>
+                      <div class="price order-2">
+                        <strong>$11.99</strong>
+                      </div>
+                    </div> <!-- .menu-food-item -->
+
+                    <div class="d-block d-md-flex menu-food-item">
+                      <div class="text order-1 mb-3">
+                        <img src="/static/images/img_3.jpg" alt="Image">
+                        <h3><a href="#">Crispy Onions Rings</a></h3>
+                        <p>A heaping mountain of rings, handmade with Panko breading and shredded coconut flakes.</p>
+                      </div>
+                      <div class="price order-2">
+                        <strong>$11.99</strong>
+                      </div>
+                    </div> <!-- .menu-food-item -->
+
+                    <div class="d-block d-md-flex menu-food-item">
+                      <div class="text order-1 mb-3">
+                        <img src="/static/images/img_1.jpg" alt="Image">
+                        <h3><a href="#">Lobster &amp; Shrimp Quesadilla</a></h3>
+                        <p>Lobster and tender shrimp, with onions, sweet peppers, spinach and our three cheese blend. Griddled and served with tomato salsa and sour cream.</p>
+                      </div>
+                      <div class="price order-2">
+                        <strong>$13.99</strong>
+                      </div>
+                    </div> <!-- .menu-food-item -->
+
+
+                  </div>
+                 
+                </div>
+              </div>
+            </div>
+            
+          </div>
         </div>
       </div>
-    </div> <!-- .section -->
-
-
+    </div>  <!-- .section -->
 
   </div>
 
@@ -228,15 +252,14 @@
       <div id="graph_service">
         <div class="row">
           
-          <div v-for="serv in resultats.node" class="col-m mb-5d-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+          <div v-for="serv in resultats" class="col-m mb-5d-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="media feature-icon d-block text-center">
               <div class="icon">
-                <span class="${serv.icon}"></span>
+                <span :class="serv.node.icon"></span>
               </div>
               <div class="media-body">
-                <h3>Quality Cuisine</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the
-                  blind texts.</p>
+                <h3>${serv.node.titre}</h3>
+                <p>${serv.node.description}</p>
               </div>
             </div>
           </div>
@@ -449,17 +472,21 @@
 <script src='https://unpkg.com/axios/dist/axios.min.js'></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 
+
 <script>
   var ma_vue = new Vue({
     el: '#identifiant_id',
     data: { 
       resultats_chef: {'succes': false,'reponse':'' },
       resultats_plat_cat: [],
+      resultatsmenu :[],
+      base_url: window.location.protocol + "//" + window.location.host + '/',
     },
     delimiters: ["${", "}"],
     mounted () {
       this.getchef()
       this.getplatcat()
+      this.getmenu()
     },
     methods: {
       getchef: function () {
@@ -487,6 +514,46 @@
           console.log(err)
           this.result['reponse'] = "Probleme de connexion , veuillez contactez l'administrateur"
           this.result['succes'] = false
+        })
+      },
+
+      getmenu: function () {
+        axios.defaults.xsrfCookieName = 'csrftoken'
+        axios.defaults.xsrfHeaderName = 'X-CSRFToken'
+        axios({
+          url : this.base_url + 'graphql',
+          method : 'post',
+          data : {
+            query: `
+            query{
+              allCategories{
+                edges{
+                  node{
+                    id
+                    nom
+                    catPlat{
+                      edges{
+                        node{
+                          id
+                          nom
+                          description
+                          prix
+                          status
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+            `
+          }
+        }).then(response => {
+          this.resultatsmenu = response.data.data.allCategories.edges;  
+          console.log(this.resultatsmenu); 
+        })
+        .catch((err) => {
+          console.log(err)
         })
       }
 
@@ -531,8 +598,8 @@
             `
           }
         }).then(response => {
-          resultats = response.data.data.allServices.edges;  
-          console.log(resultats); 
+          this.resultats = response.data.data.allServices.edges;  
+          console.log(this.resultats); 
         })
         .catch((err) => {
           console.log(err)
@@ -540,7 +607,12 @@
       },
     }
   })
+
 </script>
+
+
+
+
 {% endblock js %}
 
 
