--- a/projet/restaurant/templates/pages/index.html
+++ b/projet/restaurant/templates/pages/index.html
@@ -25,7 +25,11 @@
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10" data-aos="fade-up">
-            <h2 class="heading mb-5">Welcome to Meal</h2>
+            
+            {% for item in translate %}
+            <h2 class="heading mb-5">{{item.title}}</h2>
+            {% endfor %}
+
             <p><a href="#section-reservation" class="smoothscroll btn btn-outline-white px-5 py-3">Reserve A Table</a>
             </p>
           </div>
